# web-etc

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  web-etc.service
.github/workflows/: python-publish.yml  security.yml  tests.yml
tests/: test_basic.py
tests/test_assets/dummy_dir/: dummy_file.json
web-etc/templates/: index.html
web_etc/: main.py
web_etc/templates/: index.html  login.html
